refactor: Unmodifiable -> List.copyOf 로 변경